working on GLTF parsing

--- a/Assets/Modules/Data/Scritps/Xrtinkr.Data.asmdef
+++ b/Assets/Modules/Data/Scritps/Xrtinkr.Data.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Xrtinkr.DataLoading",
+    "name": "Xrtinkr.Data",
     "rootNamespace": "",
     "references": [
         "GUID:774f0e7b520e24644b448f5ac7fa5d94",
