--- a/Assets/Modules/Interaction/Scripts/Xrtinkr.Interaction.asmdef
+++ b/Assets/Modules/Interaction/Scripts/Xrtinkr.Interaction.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:2a230cb87a1d3ba4a98bdc0ddae76e6c",
-        "GUID:f64c9ebcd7899c3448a08dc9f9ddbe30"
+        "GUID:f64c9ebcd7899c3448a08dc9f9ddbe30",
+        "GUID:cf9ba48e422ce3a43ba38dce0ef819b2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
