--- a/Assets/Modules/UI/Scripts/Xrtinkr.UI.asmdef
+++ b/Assets/Modules/UI/Scripts/Xrtinkr.UI.asmdef
@@ -2,7 +2,8 @@
     "name": "Xrtinkr.UI",
     "rootNamespace": "",
     "references": [
-        "GUID:cbc8f936be1dea64385b8b31ab7fee0e"
+        "GUID:cbc8f936be1dea64385b8b31ab7fee0e",
+        "GUID:2a230cb87a1d3ba4a98bdc0ddae76e6c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
