--- a/Assets/Modules/UI/Scripts/Xrtinkr.UI.asmdef
+++ b/Assets/Modules/UI/Scripts/Xrtinkr.UI.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:cbc8f936be1dea64385b8b31ab7fee0e",
-        "GUID:2a230cb87a1d3ba4a98bdc0ddae76e6c"
+        "GUID:2a230cb87a1d3ba4a98bdc0ddae76e6c",
+        "GUID:e1a1ae0a3c4374d4eaa75d8c518c6cc6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
